[gd_scene load_steps=4 format=3 uid="uid://bkuvij70opyof"]

[ext_resource type="Script" path="res://addons/NetworkDebugTool/NDT_GUI/HttpRequestDetailsPreview.gd" id="1_08mk3"]
[ext_resource type="PackedScene" uid="uid://jb85xokfqc2c" path="res://addons/NetworkDebugTool/NDT_GUI/HttpRequestDetailsPreview/CopyAbleLabel/CopyAbleLabel.tscn" id="2_n7e1v"]
[ext_resource type="PackedScene" uid="uid://wqn0jvn1bieo" path="res://addons/NetworkDebugTool/NDT_GUI/CopyBtn/CopyBtn.tscn" id="3_ugo2s"]

[node name="HttpRequestDetailsPreview" type="TabContainer"]
custom_minimum_size = Vector2(100, 100)
offset_right = 300.0
offset_bottom = 200.0
current_tab = 0
script = ExtResource("1_08mk3")
CopyAbleLabelScene = ExtResource("2_n7e1v")

[node name="Headers" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5
metadata/_tab_index = 0

[node name="ScrollContainer" type="ScrollContainer" parent="Headers"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Headers/ScrollContainer"]
layout_mode = 2

[node name="Headers" type="GridContainer" parent="Headers/ScrollContainer/VBoxContainer"]
layout_mode = 2
columns = 2

[node name="Label" type="Label" parent="Headers/ScrollContainer/VBoxContainer/Headers"]
custom_minimum_size = Vector2(130, 0)
layout_mode = 2
text = "Request URL:"

[node name="UrlLabel" parent="Headers/ScrollContainer/VBoxContainer/Headers" instance=ExtResource("2_n7e1v")]
unique_name_in_owner = true
layout_mode = 2

[node name="Label2" type="Label" parent="Headers/ScrollContainer/VBoxContainer/Headers"]
layout_mode = 2
text = "Method:"

[node name="MethodLabel" parent="Headers/ScrollContainer/VBoxContainer/Headers" instance=ExtResource("2_n7e1v")]
unique_name_in_owner = true
layout_mode = 2

[node name="Label4" type="Label" parent="Headers/ScrollContainer/VBoxContainer/Headers"]
layout_mode = 2
text = "Status code:"

[node name="StatusLabel" parent="Headers/ScrollContainer/VBoxContainer/Headers" instance=ExtResource("2_n7e1v")]
unique_name_in_owner = true
layout_mode = 2

[node name="Label3" type="Label" parent="Headers/ScrollContainer/VBoxContainer/Headers"]
layout_mode = 2
text = "Request time:"

[node name="RequestTimestampLabel" parent="Headers/ScrollContainer/VBoxContainer/Headers" instance=ExtResource("2_n7e1v")]
unique_name_in_owner = true
layout_mode = 2

[node name="Label5" type="Label" parent="Headers/ScrollContainer/VBoxContainer/Headers"]
layout_mode = 2
text = "Response time:"

[node name="ResponseTimestampLabel" parent="Headers/ScrollContainer/VBoxContainer/Headers" instance=ExtResource("2_n7e1v")]
unique_name_in_owner = true
layout_mode = 2

[node name="HSeparator" type="HSeparator" parent="Headers/ScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="Label2" type="Label" parent="Headers/ScrollContainer/VBoxContainer"]
layout_mode = 2
text = "Response headers:"

[node name="ResponseHeadersContainer" type="GridContainer" parent="Headers/ScrollContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="HSeparator2" type="HSeparator" parent="Headers/ScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="Label3" type="Label" parent="Headers/ScrollContainer/VBoxContainer"]
layout_mode = 2
text = "Request headers:"

[node name="RequestHeadersContainer" type="GridContainer" parent="Headers/ScrollContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="Request" type="MarginContainer" parent="."]
visible = false
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5
metadata/_tab_index = 1

[node name="ScrollContainer" type="ScrollContainer" parent="Request"]
layout_mode = 2

[node name="Request" type="VBoxContainer" parent="Request/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="Request/ScrollContainer/Request"]
layout_mode = 2

[node name="Label" type="Label" parent="Request/ScrollContainer/Request/HBoxContainer"]
layout_mode = 2
text = "Request body:"

[node name="CopyRequestBtn" parent="Request/ScrollContainer/Request/HBoxContainer" instance=ExtResource("3_ugo2s")]
unique_name_in_owner = true
layout_mode = 2

[node name="RequestBodyLabel" type="RichTextLabel" parent="Request/ScrollContainer/Request"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
fit_content = true
scroll_active = false

[node name="Response" type="MarginContainer" parent="."]
visible = false
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5
metadata/_tab_index = 2

[node name="NoResponseYetLabel" type="Label" parent="Response"]
unique_name_in_owner = true
visible = false
layout_mode = 2
text = "<No response arrived>"

[node name="ResponseTab" type="ScrollContainer" parent="Response"]
unique_name_in_owner = true
layout_mode = 2

[node name="Response" type="VBoxContainer" parent="Response/ResponseTab"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="Response/ResponseTab/Response"]
layout_mode = 2

[node name="Label" type="Label" parent="Response/ResponseTab/Response/HBoxContainer"]
layout_mode = 2
text = "Response:"

[node name="CopyResponseBtn" parent="Response/ResponseTab/Response/HBoxContainer" instance=ExtResource("3_ugo2s")]
unique_name_in_owner = true
layout_mode = 2

[node name="ResponseBodyLabel" type="RichTextLabel" parent="Response/ResponseTab/Response"]
unique_name_in_owner = true
layout_mode = 2
fit_content = true
scroll_active = false

[node name="ResponseTextureRect" type="TextureRect" parent="Response/ResponseTab/Response"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
expand_mode = 1
stretch_mode = 5
